Made some changes to the workflow

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,6 +10,8 @@ jobs:
 
         # Put your action repo here
         uses: protontypes/continuous-reforestation@main
+        with:
+            number_of_trees: 3
 
       - name: Check outputs
         run: |
