--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
   RAAS_API_KEY:
     description: "The API KEY to access DigitalHumani.com - Reforestation as a Service"
     value: DigitalHumani_API_KEY
+  number_of_trees: 
+    description: "Number of trees you want to plant"
+    default: 1
 outputs:
   myOutput:
     description: "Output from the action"
