--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,17 @@
 name: "Continuous Reforestation"
 description: "Plant trees within your workflow with digitalhumani.com"
 author: "protontypes"
+
 inputs:
-  projectid:
-    description: "Id of the reforestation project for where you want the trees to be planted. Example of an id: 93333333 (Project Ids are 8 digits long)"
-    required: true
-  enterpriceid:
+  enterpriseid:
     description: "Id of your enterprise. Example of an enterprise id: 11111111 (Enterprise Ids are 8 digits long)"
     required: true
   user: 
     decription: "End user by whom the trees were planted"
+    required: true
+    default: ${{ github.actor }}
+  projectid:
+    description: "Id of the reforestation project for where you want the trees to be planted. Example of an id: 93333333 (Project Ids are 8 digits long)"
     required: true
   treeCount: 
     description: "Number of trees requested to plant. Example: 1"
@@ -18,12 +20,11 @@ inputs:
   production:
     decription: "Use sandbox or production API"
     required: true
-    default: false
-
+    default: "false"
    
 outputs:
-  apiresponse:
-    description: "JSON response of the API"
+  response:
+    description: "JSON response of the RaaS API"
    
 runs:
   using: "docker"
