--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Continuous Reforestation"
+name: "continuous-reforestation"
 description: "Plant trees within your workflow with digitalhumani.com"
 author: "protontypes"
 
