--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: "continuous-reforestation"
-description: "Plant trees within your workflow with digitalhumani.com"
+description: "Plant trees within your development workflow with digitalhumani.com"
 author: "protontypes"
 
 inputs:
