--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -5,12 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Self test
-        id: selftest
-
-        # Put your action repo here
-        uses: protontypes/continuous-reforestation@main
+      
+      - uses: protontypes/continuous-reforestation@main
         with:
+        # Enter your API variables below
             enterpriseid: "cd7cedcd"
             user: ${{ github.actor }}
             treecount: 10
