added project ID as default for areas that need reforestation the most

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -16,7 +16,7 @@ jobs:
             enterpriseid: "cd7cedcd"
             user: ${{ github.actor }}
             treecount: 10
-            projectid: "92222222" # onetreeplanted.org/collections/latin-america/products/brazil-forests
+            projectid: "14442771" # This projectid can be used to have your trees planted where they are needed the most, so this is a great ID to use by default when making the API call. 
             production: "true"
 
       - name: Response of digitalhumani.com RaaS API
