added pull request example integration

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,13 +1,16 @@
-name: Integration Example
+name: Example Integration on Pull Request
 on: 
-  push:
+  pull_request_target:
     branches:
       - main
+    types:
+      - closed
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Plant a Tree
+        if: github.event.pull_request.merged == true
         id: planttree
         uses: protontypes/continuous-reforestation@main
         with:
@@ -15,8 +18,8 @@ jobs:
             apikey: ${{ secrets.raaskey }}
             enterpriseid: "cd7cedcd"
             user: ${{ github.actor }}
-            treecount: 10
-            projectid: "14442771" # This projectid can be used to have your trees planted where they are needed the most, so this is a great ID to use by default when making the API call. 
+            treecount: 5
+            projectid: "14442771" # This projectid can be used to have your trees planted where they are needed the most.
             production: "true"
 
       - name: Response of digitalhumani.com RaaS API
