Added a request for the number of trees. The output should be printed from the action.

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Plant a Tree
         if: github.event.pull_request.merged == true
         id: planttree
-        uses: protontypes/continuous-reforestation@main
+        uses: tjarkdoering/continuous-reforestation@main
         with:
         # Enter your API variables below
             apikey: ${{ secrets.raaskey }}
@@ -25,3 +25,4 @@ jobs:
       - name: Response of digitalhumani.com RaaS API
         run: |
             echo "${{ steps.planttree.outputs.response }}"
+            echo "${{ steps.planttree.outputs.numbertrees }}"
