--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Plant a Tree
         id: planttree
-        uses: protontypes/continuous-reforestation@main
+        uses: tjarkdoering/continuous-reforestation@main
         with:
         # Enter your API variables below
             apikey: ${{ secrets.raaskey }}
@@ -22,3 +22,4 @@ jobs:
       - name: Response of digitalhumani.com RaaS API
         run: |
             echo "${{ steps.planttree.outputs.response }}"
+            echo "${{ steps.planttree.outputs.numbertrees }}"
