--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,3 +22,4 @@ jobs:
       - name: Response of digitalhumani.com RaaS API
         run: |
             echo "${{ steps.planttree.outputs.response }}"
+            echo "${{ steps.planttree.outputs.plantedTrees }}"
