--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,10 +24,10 @@ jobs:
             echo "${{ steps.planttree.outputs.response }}"
             echo "${{ steps.planttree.outputs.plantedTrees }}"
   
-      - name: Planted tree badge
+      - name: Badge
         uses: RubbaBoy/BYOB@v1.2.0
         with:
-          NAME: time
+          NAME: trees
           LABEL: 'Planted Trees'
           STATUS: ${{ steps.planttree.outputs.plantedTrees }}
           COLOR: 009485
